<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.soft.espresso.MainActivity">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_weight=".20"

            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/userImage"
                android:src="@mipmap/ic_launcher_round"
                android:layout_width="100dp"
                android:layout_height="100dp" />

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"

            android:layout_weight=".60"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:textColor="@color/black"
                android:layout_margin="10dp"
                android:id="@+id/edtEmail"
                android:text="User Name"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/black"
                android:layout_margin="10dp"
                android:id="@+id/edtPassword"
                android:text="Email address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
