<resources>
    <string name="app_name">EspressoDemo</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_users">User List</string>
    <string name="nav_item_aboutus">About us</string>
    <string name="nav_item_notifications">Messages</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_users</item>
        <item>@string/nav_item_aboutus</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="userList">User List</string>
    <string name="aboutus">About us</string>

</resources>
